<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical"
    tools:context="org.todoshis.dayscounter.Settings">

    <ScrollView
        android:id="@+id/scrollContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/addCounter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35sp"
                android:background="@drawable/button_layout"
                android:textColor="@color/white"
                android:text="@string/create_counter" />

            <Button
                android:id="@+id/changeStartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35sp"
                android:layout_marginBottom="35sp"
                android:background="@drawable/button_layout"
                android:textColor="@color/white"
                android:text="@string/change_date" />

            <Button
                android:id="@+id/changePhrase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35sp"
                android:layout_marginBottom="35sp"
                android:background="@drawable/button_layout"
                android:textColor="@color/white"
                android:text="@string/change_phrase" />

            <Button
                android:id="@+id/delLastCounter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35sp"
                android:background="@drawable/button_layout"
                android:textColor="@color/white"
                android:text="@string/del_last_counter" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>